--- a/src/components/Home/CardList.scss
+++ b/src/components/Home/CardList.scss
@@ -5,3 +5,30 @@
   margin: 0 auto;
   padding: 1em 0.5em;
 }
+
+.top__button__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.overlay {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 8px;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+  font-weight: 900;
+  color: white;
+}
+
+.cardlist__container {
+  position: relative;
+  padding: 1rem;
+}
