Implemented infinite scrolling

--- a/src/components/Home/CardList.scss
+++ b/src/components/Home/CardList.scss
@@ -32,3 +32,9 @@
   position: relative;
   padding: 1rem;
 }
+
+.button__container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
